# ai-research-assistant

./: .dockerignore  .env.example  .env.production  .env.template  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FLASK_TESTING_GUIDE.md  README.md  TRANSLATION_SOLUTION.md  TRANSLATION_USAGE.md  app.py  check_research_status.py  cli.py  coverage.xml  flask_app_with_deepseek.py  flask_app_with_improved_rate_limiting.py  fly.toml  improved_rate_limiting.py  pyproject.toml  render.yaml  requirements.txt  research_history.db  run_full_flask_app.py  simple_flask_test.py  simple_tavily_test.py  test_deepseek_only.py  test_fallback.py  test_flask_app.py  test_flask_fallback.py  test_tavily.py  translation_cache.db
.claude/: settings.local.json
.github/workflows/: fly.yml
docs/: API_SETUP.md  DB_MODEL.md  RESEARCH_AGENT.md  ROADMAP.md  SQLITE_FEATURES.md  TROUBLESHOOTING.md
examples/: multilang_research_cli.py  research_assistant.py  research_history_cli.py  simple_chat_agent.py  task_executor_agent.py
src/agents/: __init__.py  base.py  multilang_research_agent.py  reactive.py  reasoning.py  research_agent.py
src/database/: __init__.py  analytics.py  database.py  models.py  sqlite_writer.py
src/services/: __init__.py  research_service.py
src/tools/: __init__.py  embeddings.py  language_detection.py  report_writer.py  search_cache.py  translation.py  translation_cache.py  web_search.py
src/tools/providers/: __init__.py  google_translate.py  llm_translate.py  mock_translate.py
src/utils/: __init__.py  config.py  llm.py  logger.py  rate_limiting.py
src/web/: __init__.py  app.py  config.py  forms.py  models.py  tasks.py  tasks_simple.py
src/web/blueprints/: __init__.py  api.py  history.py  main.py  research.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: base.html  index.html
src/web/templates/research/: progress.html
templates/: base.html  history.html  home.html  progress.html  settings.html
tests/: test_agents.py  test_app.py  test_database.py  test_report_writer.py  test_research_agent.py  test_search_cache.py  test_semantic_cache.py  test_service.py  test_utils.py  test_web_search.py
tests/fixtures/: mock_tavily_response.json
tests/fixtures/sample_reports/: sample_research_report.md
