[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-research-assistant"
version = "0.1.0"
description = "AI Research Assistant - web search, multi-language reports, LLM-powered analysis"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # LLM providers
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    # Web search
    "tavily-python>=0.3.0",
    # Data validation & config
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    # Vector search
    "sqlite-vec>=0.1.0",
    "numpy>=1.24.0",
    # Logging & resilience
    "structlog>=23.0.0",
    "tenacity>=8.0.0",
    # Flask web interface
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-wtf>=1.0.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
translation = [
    "google-cloud-translate>=3.15.0",
    "langdetect>=1.0.9",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"